<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.alphamax.covifight.UI.fragment.HomeFragment"
        android:label="@string/navigationHome"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_map"
        android:name="com.alphamax.covifight.UI.fragment.MapFragment"
        android:label="@string/navigationMap"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.alphamax.covifight.UI.fragment.ContactFragment"
        android:label="@string/navigationContact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.alphamax.covifight.UI.fragment.ProfileFragment"
        android:label="@string/navigationProfile"
        tools:layout="@layout/fragment_profile" />


</navigation>
