<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    tools:context=".UI.fragment.HomeFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    >

    <TextView
        android:id="@+id/textHome1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textHome1"
        android:textStyle="bold"
        android:textSize="22dp"
        android:textColor="#15135B"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/frameHome"
        android:layout_width="154dp"
        android:layout_height="154dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_circle"
        app:layout_constraintTop_toBottomOf="@id/textHome1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/imageDescription"
            android:src="@mipmap/ic_idle" />

        <TextView
            android:id="@+id/activityHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activityIdleHome"
            android:layout_marginTop="80dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#15135B"
            android:textSize="16dp"
            android:textStyle="bold" />

    </FrameLayout>

    <TextView
        android:id="@+id/lattitudeHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/latitudeHintHome"
        android:textColor="#15135B"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/frameHome"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/longitudeHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/longitudeHintHome"
        android:textColor="#15135B"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/frameHome"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/peopleAroundHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/peopleAroundHome"
        android:textColor="#15135B"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitudeHome"/>

    <TextView
        android:id="@+id/probabilityHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="Status"
        android:textAlignment="center"
        android:textColor="	#008000"
        android:textSize="20dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:background="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peopleAroundHome" />


    <TextView
            android:id="@+id/textHome2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/textHome3"
            android:textColor="#15135B"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/probabilityHome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textHome2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/textHome4"
            android:textColor="#15135B"
            android:textSize="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/textHome5"
            android:textColor="#15135B"
            android:textSize="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/textHome6"
            android:textColor="#15135B"
            android:textSize="18dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>