<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/verificationText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/ver_txtverification"
        android:textColor="#15135B"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/verificationText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/ver_enter_otp"
        android:textColor="#9915135B"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verificationText1" />


    <com.goodiebag.pinview.Pinview
        android:id="@+id/verficationOTP"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        app:cursorVisible="true"
        app:forceKeyboard="false"
        app:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verificationText2"
        app:password="false"
        app:pinHeight="32dp"
        app:pinLength="6"
        app:pinWidth="32dp"
        app:splitWidth="4dp" />

    <TextView
        android:id="@+id/verificationText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ver_no_receiveotp"
        android:textAlignment="center"
        android:textColor="#9915135B"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verficationOTP" />

    <TextView
        android:id="@+id/verificationResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/resendotp"
        android:textColor="@color/linkblue"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verificationText3" />

    <Button
        android:id="@+id/verificationButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/bg_button"
        android:text="@string/ver_submit"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verificationResend" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>